Initial Commit add border Circle Image View

--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -177,8 +177,8 @@
                     android:layout_height="100dp"
                     android:elevation="0dp"
                     android:src="@drawable/avatar"
-                    app:civ_border_color="@color/colorBlack"
-                    app:civ_border_width="1dp" />
+                    app:civ_border_color="@color/colorWhite"
+                    app:civ_border_width="1.5dp" />
             </RelativeLayout>
         </FrameLayout>
     </LinearLayout>
