Initial Commit add hide progressbar

--- a/app/src/main/res/layout/activity_splace_screen2.xml
+++ b/app/src/main/res/layout/activity_splace_screen2.xml
@@ -4,30 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colordark"
     tools:context=".SplaceScreen">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colordark">
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
-        <!--<ImageView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_centerInParent="true"-->
-        <!--android:foregroundGravity="center"-->
-        <!--android:src="@drawable/ic_pattern_baru"/>-->
         <ImageView
+            android:id="@+id/image12"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:paddingHorizontal="0dp"
+            android:paddingBottom="10dp"
+            android:padding="20dp"
+
+            android:src="@drawable/dicoding" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="70dp"
-            android:layout_centerInParent="true"
-            android:foregroundGravity="center"
-            android:src="@drawable/githubwhite"
-            android:elevation="10dp"/>
+            android:text="Submission"
+            android:textColor="@color/colorWhite"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </RelativeLayout>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:outlineAmbientShadowColor="@color/colorWhite"
+            />
+
+
+
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
